# arxiv-reader

./: .gitignore  AGENTS.md  CHECKLIST.md  CLAUDE.md  GUIDE.md  PLAN.md  README.md  REGENERATE.md  file_index.json  main.py  pyproject.toml  run.sh  state.json
data/: arxiv_categories.json
scripts/: fetch_categories.py
